@@ -7,4 +7,13 @@ class Product < ActiveRecord::Base
   def to_s
     name
   end
+
+  def name=(value)
+    self.slug = value.to_s.parameterize
+    super(value)
+  end
+
+  def to_param
+    slug
+  end
 end
